tests/fixtures/errors/constraint_violation.z
# String is a reference type; it cannot satisfy an Any.valtype bound.
id_val: function as { t: Any.valtype } in { val: t } out t is {
    return val
}

main: function is {
    s9: "boxed".string
    r9: (id_val val: s9.take)
    print "\{r9}"
}
